parser/egraphql_parser.go
// Code generated from EGraphQL.g4 by ANTLR 4.9. DO NOT EDIT.

package parser // EGraphQL

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var literalNames = []string{
	"", "'query'", "'mutation'", "'subscription'", "'{'", "'}'", "'('", "')'",
	"':'", "'...'", "'fragment'", "'on'", "'true'", "'false'", "'null'", "'['",
	"']'", "'$'", "'='", "'!'", "'@'", "'schema'", "'extend'", "'scalar'",
	"'extends'", "'type'", "'implements'", "'&'", "'interface'", "'union'",
	"'|'", "'enum'", "'input'", "'directive'", "'QUERY'", "'MUTATION'", "'SUBSCRIPTION'",
	"'FIELD'", "'FRAGMENT_DEFINITION'", "'FRAGMENT_SPREAD'", "'INLINE_FRAGMENT'",
	"'SCHEMA'", "'SCALAR'", "'OBJECT'", "'FIELD_DEFINITION'", "'ARGUMENT_DEFINITION'",
	"'INTERFACE'", "'UNION'", "'ENUM'", "'ENUM_VALUE'", "'INPUT_OBJECT'", "'INPUT_FIELD_DEFINITION'",
	"'<'", "'>'", "'template'", "'apply'", "'to'", "", "", "", "", "", "",
	"", "", "','", "", "", "'\uEFBBBF'", "'\uFEFF'", "'\u0000FEFF'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "NAME", "STRING", "BLOCK_STRING", "ID", "FLOAT", "INT", "PUNCTUATOR",
	"WS", "COMMA", "LineComment", "UNICODE_BOM", "UTF8_BOM", "UTF16_BOM", "UTF32_BOM",
}

var ruleNames = []string{
	"document", "definition", "executableDefinition", "operationDefinition",
	"operationType", "selectionSet", "selection", "field", "arguments", "argument",
	"alias", "fragmentSpread", "fragmentDefinition", "fragmentName", "typeCondition",
	"inlineFragment", "value", "intValue", "floatValue", "booleanValue", "stringValue",
	"nullValue", "enumValue", "listValue", "objectValue", "objectField", "variable",
	"variableDefinitions", "variableDefinition", "defaultValue", "type_", "namedType",
	"listType", "directives", "directive", "typeSystemDefinition", "typeSystemExtension",
	"schemaDefinition", "rootOperationTypeDefinition", "schemaExtension", "operationTypeDefinition",
	"description", "typeDefinition", "templetableTypeDefinition", "typeExtension",
	"scalarTypeDefinition", "scalarTypeExtension", "objectTypeDefinition",
	"implementsInterfaces", "fieldsDefinition", "fieldDefinition", "argumentsDefinition",
	"inputValueDefinition", "objectTypeExtension", "interfaceTypeDefinition",
	"interfaceTypeExtension", "unionTypeDefinition", "unionMemberTypes", "unionTypeExtension",
	"enumTypeDefinition", "enumValuesDefinition", "enumValueDefinition", "enumTypeExtension",
	"inputObjectTypeDefinition", "inputFieldsDefinition", "inputObjectTypeExtension",
	"directiveDefinition", "directiveLocations", "directiveLocation", "executableDirectiveLocation",
	"typeSystemDirectiveLocation", "name", "templateParametersDefinition",
	"templateTypeDefinition", "templateImplementedTypeDefinition",
}

type EGraphQLParser struct {
	*antlr.BaseParser
}

// NewEGraphQLParser produces a new parser instance for the optional input antlr.TokenStream.
//
// The *EGraphQLParser instance produced may be reused by calling the SetInputStream method.
// The initial parser configuration is expensive to construct, and the object is not thread-safe;
// however, if used within a Golang sync.Pool, the construction cost amortizes well and the
// objects can be used in a thread-safe manner.
func NewEGraphQLParser(input antlr.TokenStream) *EGraphQLParser {
	this := new(EGraphQLParser)
	deserializer := antlr.NewATNDeserializer(nil)
	deserializedATN := deserializer.DeserializeFromUInt16(parserATN)
	decisionToDFA := make([]*antlr.DFA, len(deserializedATN.DecisionToState))
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "EGraphQL.g4"

	return this
}

// EGraphQLParser tokens.
const (
	EGraphQLParserEOF          = antlr.TokenEOF
	EGraphQLParserT__0         = 1
	EGraphQLParserT__1         = 2
	EGraphQLParserT__2         = 3
	EGraphQLParserT__3         = 4
	EGraphQLParserT__4         = 5
	EGraphQLParserT__5         = 6
	EGraphQLParserT__6         = 7
	EGraphQLParserT__7         = 8
	EGraphQLParserT__8         = 9
	EGraphQLParserT__9         = 10
	EGraphQLParserT__10        = 11
	EGraphQLParserT__11        = 12
	EGraphQLParserT__12        = 13
	EGraphQLParserT__13        = 14
	EGraphQLParserT__14        = 15
	EGraphQLParserT__15        = 16
	EGraphQLParserT__16        = 17
	EGraphQLParserT__17        = 18
	EGraphQLParserT__18        = 19
	EGraphQLParserT__19        = 20
	EGraphQLParserT__20        = 21
	EGraphQLParserT__21        = 22
	EGraphQLParserT__22        = 23
	EGraphQLParserT__23        = 24
	EGraphQLParserT__24        = 25
	EGraphQLParserT__25        = 26
	EGraphQLParserT__26        = 27
	EGraphQLParserT__27        = 28
	EGraphQLParserT__28        = 29
	EGraphQLParserT__29        = 30
	EGraphQLParserT__30        = 31
	EGraphQLParserT__31        = 32
	EGraphQLParserT__32        = 33
	EGraphQLParserT__33        = 34
	EGraphQLParserT__34        = 35
	EGraphQLParserT__35        = 36
	EGraphQLParserT__36        = 37
	EGraphQLParserT__37        = 38
	EGraphQLParserT__38        = 39
	EGraphQLParserT__39        = 40
	EGraphQLParserT__40        = 41
	EGraphQLParserT__41        = 42
	EGraphQLParserT__42        = 43
	EGraphQLParserT__43        = 44
	EGraphQLParserT__44        = 45
	EGraphQLParserT__45        = 46
	EGraphQLParserT__46        = 47
	EGraphQLParserT__47        = 48
	EGraphQLParserT__48        = 49
	EGraphQLParserT__49        = 50
	EGraphQLParserT__50        = 51
	EGraphQLParserT__51        = 52
	EGraphQLParserT__52        = 53
	EGraphQLParserT__53        = 54
	EGraphQLParserT__54        = 55
	EGraphQLParserT__55        = 56
	EGraphQLParserNAME         = 57
	EGraphQLParserSTRING       = 58
	EGraphQLParserBLOCK_STRING = 59
	EGraphQLParserID           = 60
	EGraphQLParserFLOAT        = 61
	EGraphQLParserINT          = 62
	EGraphQLParserPUNCTUATOR   = 63
	EGraphQLParserWS           = 64
	EGraphQLParserCOMMA        = 65
	EGraphQLParserLineComment  = 66
	EGraphQLParserUNICODE_BOM  = 67
	EGraphQLParserUTF8_BOM     = 68
	EGraphQLParserUTF16_BOM    = 69
	EGraphQLParserUTF32_BOM    = 70
)

// EGraphQLParser rules.
const (
	EGraphQLParserRULE_document                          = 0
	EGraphQLParserRULE_definition                        = 1
	EGraphQLParserRULE_executableDefinition              = 2
	EGraphQLParserRULE_operationDefinition               = 3
	EGraphQLParserRULE_operationType                     = 4
	EGraphQLParserRULE_selectionSet                      = 5
	EGraphQLParserRULE_selection                         = 6
	EGraphQLParserRULE_field                             = 7
	EGraphQLParserRULE_arguments                         = 8
	EGraphQLParserRULE_argument                          = 9
	EGraphQLParserRULE_alias                             = 10
	EGraphQLParserRULE_fragmentSpread                    = 11
	EGraphQLParserRULE_fragmentDefinition                = 12
	EGraphQLParserRULE_fragmentName                      = 13
	EGraphQLParserRULE_typeCondition                     = 14
	EGraphQLParserRULE_inlineFragment                    = 15
	EGraphQLParserRULE_value                             = 16
	EGraphQLParserRULE_intValue                          = 17
	EGraphQLParserRULE_floatValue                        = 18
	EGraphQLParserRULE_booleanValue                      = 19
	EGraphQLParserRULE_stringValue                       = 20
	EGraphQLParserRULE_nullValue                         = 21
	EGraphQLParserRULE_enumValue                         = 22
	EGraphQLParserRULE_listValue                         = 23
	EGraphQLParserRULE_objectValue                       = 24
	EGraphQLParserRULE_objectField                       = 25
	EGraphQLParserRULE_variable                          = 26
	EGraphQLParserRULE_variableDefinitions               = 27
	EGraphQLParserRULE_variableDefinition                = 28
	EGraphQLParserRULE_defaultValue                      = 29
	EGraphQLParserRULE_type_                             = 30
	EGraphQLParserRULE_namedType                         = 31
	EGraphQLParserRULE_listType                          = 32
	EGraphQLParserRULE_directives                        = 33
	EGraphQLParserRULE_directive                         = 34
	EGraphQLParserRULE_typeSystemDefinition              = 35
	EGraphQLParserRULE_typeSystemExtension               = 36
	EGraphQLParserRULE_schemaDefinition                  = 37
	EGraphQLParserRULE_rootOperationTypeDefinition       = 38
	EGraphQLParserRULE_schemaExtension                   = 39
	EGraphQLParserRULE_operationTypeDefinition           = 40
	EGraphQLParserRULE_description                       = 41
	EGraphQLParserRULE_typeDefinition                    = 42
	EGraphQLParserRULE_templetableTypeDefinition         = 43
	EGraphQLParserRULE_typeExtension                     = 44
	EGraphQLParserRULE_scalarTypeDefinition              = 45
	EGraphQLParserRULE_scalarTypeExtension               = 46
	EGraphQLParserRULE_objectTypeDefinition              = 47
	EGraphQLParserRULE_implementsInterfaces              = 48
	EGraphQLParserRULE_fieldsDefinition                  = 49
	EGraphQLParserRULE_fieldDefinition                   = 50
	EGraphQLParserRULE_argumentsDefinition               = 51
	EGraphQLParserRULE_inputValueDefinition              = 52
	EGraphQLParserRULE_objectTypeExtension               = 53
	EGraphQLParserRULE_interfaceTypeDefinition           = 54
	EGraphQLParserRULE_interfaceTypeExtension            = 55
	EGraphQLParserRULE_unionTypeDefinition               = 56
	EGraphQLParserRULE_unionMemberTypes                  = 57
	EGraphQLParserRULE_unionTypeExtension                = 58
	EGraphQLParserRULE_enumTypeDefinition                = 59
	EGraphQLParserRULE_enumValuesDefinition              = 60
	EGraphQLParserRULE_enumValueDefinition               = 61
	EGraphQLParserRULE_enumTypeExtension                 = 62
	EGraphQLParserRULE_inputObjectTypeDefinition         = 63
	EGraphQLParserRULE_inputFieldsDefinition             = 64
	EGraphQLParserRULE_inputObjectTypeExtension          = 65
	EGraphQLParserRULE_directiveDefinition               = 66
	EGraphQLParserRULE_directiveLocations                = 67
	EGraphQLParserRULE_directiveLocation                 = 68
	EGraphQLParserRULE_executableDirectiveLocation       = 69
	EGraphQLParserRULE_typeSystemDirectiveLocation       = 70
	EGraphQLParserRULE_name                              = 71
	EGraphQLParserRULE_templateParametersDefinition      = 72
	EGraphQLParserRULE_templateTypeDefinition            = 73
	EGraphQLParserRULE_templateImplementedTypeDefinition = 74
)

// IDocumentContext is an interface to support dynamic dispatch.
type IDocumentContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDocumentContext differentiates from other interfaces.
	IsDocumentContext()
}

type DocumentContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDocumentContext() *DocumentContext {
	var p = new(DocumentContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = EGraphQLParserRULE_document
	return p
}

func (*DocumentContext) IsDocumentContext() {}

func NewDocumentContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DocumentContext {
	var p = new(DocumentContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = EGraphQLParserRULE_document

	return p
}

func (s *DocumentContext) GetParser() antlr.Parser { return s.parser }

func (s *DocumentContext) AllDefinition() []IDefinitionContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IDefinitionContext)(nil)).Elem())
	var tst = make([]IDefinitionContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IDefinitionContext)
		}
	}

	return tst
}

func (s *DocumentContext) Definition(i int) IDefinitionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDefinitionContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IDefinitionContext)
}

func (s *DocumentContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DocumentContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DocumentContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(EGraphQLListener); ok {
		listenerT.EnterDocument(s)
	}
}

func (s *DocumentContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(EGraphQLListener); ok {
		listenerT.ExitDocument(s)
	}
}

func (p *EGraphQLParser) Document() (localctx IDocumentContext) {
	localctx = NewDocumentContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, EGraphQLParserRULE_document)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(151)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = (((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<EGraphQLParserT__0)|(1<<EGraphQLParserT__1)|(1<<EGraphQLParserT__2)|(1<<EGraphQLParserT__3)|(1<<EGraphQLParserT__9)|(1<<EGraphQLParserT__20)|(1<<EGraphQLParserT__21)|(1<<EGraphQLParserT__22)|(1<<EGraphQLParserT__23)|(1<<EGraphQLParserT__24)|(1<<EGraphQLParserT__27)|(1<<EGraphQLParserT__28)|(1<<EGraphQLParserT__30))) != 0) || (((_la-32)&-(0x1f+1)) == 0 && ((1<<uint((_la-32)))&((1<<(EGraphQLParserT__31-32))|(1<<(EGraphQLParserT__32-32))|(1<<(EGraphQLParserT__53-32))|(1<<(EGraphQLParserT__54-32))|(1<<(EGraphQLParserSTRING-32))|(1<<(EGraphQLParserBLOCK_STRING-32)))) != 0) {
		{
			p.SetState(150)
			p.Definition()
		}

		p.SetState(153)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IDefinitionContext is an interface to support dynamic dispatch.
type IDefinitionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDefinitionContext differentiates from other interfaces.
	IsDefinitionContext()
}

type DefinitionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDefinitionContext() *DefinitionContext {
	var p = new(DefinitionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = EGraphQLParserRULE_definition
	return p
}

func (*DefinitionContext) IsDefinitionContext() {}

func NewDefinitionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DefinitionContext {
	var p = new(DefinitionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = EGraphQLParserRULE_definition

	return p
}

func (s *DefinitionContext) GetParser() antlr.Parser { return s.parser }

func (s *DefinitionContext) ExecutableDefinition() IExecutableDefinitionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExecutableDefinitionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExecutableDefinitionContext)
}

func (s *DefinitionContext) TypeSystemDefinition() ITypeSystemDefinitionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITypeSystemDefinitionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITypeSystemDefinitionContext)
}

func (s *DefinitionContext) TypeSystemExtension() ITypeSystemExtensionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITypeSystemExtensionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITypeSystemExtensionContext)
}

func (s *DefinitionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DefinitionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DefinitionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(EGraphQLListener); ok {
		listenerT.EnterDefinition(s)
	}
}

func (s *DefinitionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(EGraphQLListener); ok {
		listenerT.ExitDefinition(s)
	}
}

func (p *EGraphQLParser) Definition() (localctx IDefinitionContext) {
	localctx = NewDefinitionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, EGraphQLParserRULE_definition)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(158)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case EGraphQLParserT__0, EGraphQLParserT__1, EGraphQLParserT__2, EGraphQLParserT__3, EGraphQLParserT__9:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(155)
			p.ExecutableDefinition()
		}

	case EGraphQLParserT__20, EGraphQLParserT__22, EGraphQLParserT__24, EGraphQLParserT__27, EGraphQLParserT__28, EGraphQLParserT__30, EGraphQLParserT__31, EGraphQLParserT__32, EGraphQLParserT__53, EGraphQLParserT__54, EGraphQLParserSTRING, EGraphQLParserBLOCK_STRING:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(156)
			p.TypeSystemDefinition()
		}

	case EGraphQLParserT__21, EGraphQLParserT__23:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(157)
			p.TypeSystemExtension()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IExecutableDefinitionContext is an interface to support dynamic dispatch.
type IExecutableDefinitionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsExecutableDefinitionContext differentiates from other interfaces.
	IsExecutableDefinitionContext()
}

type ExecutableDefinitionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExecutableDefinitionContext() *ExecutableDefinitionContext {
	var p = new(ExecutableDefinitionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = EGraphQLParserRULE_executableDefinition
	return p
}

func (*ExecutableDefinitionContext) IsExecutableDefinitionContext() {}

func NewExecutableDefinitionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExecutableDefinitionContext {
	var p = new(ExecutableDefinitionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = EGraphQLParserRULE_executableDefinition

	return p
}

func (s *ExecutableDefinitionContext) GetParser() antlr.Parser { return s.parser }

func (s *ExecutableDefinitionContext) OperationDefinition() IOperationDefinitionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IOperationDefinitionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IOperationDefinitionContext)
}

func (s *ExecutableDefinitionContext) FragmentDefinition() IFragmentDefinitionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFragmentDefinitionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFragmentDefinitionContext)
}

func (s *ExecutableDefinitionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExecutableDefinitionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ExecutableDefinitionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(EGraphQLListener); ok {
		listenerT.EnterExecutableDefinition(s)
	}
}

func (s *ExecutableDefinitionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(EGraphQLListener); ok {
		listenerT.ExitExecutableDefinition(s)
	}
}
